# Assignments_UBB

./: .gitignore
1st Year/Semester 2/Graphs/Lab_1/Lab_1/: CMakeLists.txt  DAGUI.cpp  DAGUI.h  Direct_Graph.cpp  Lab_1.vcxproj  Service.h  testGraph.txt
1st Year/Semester 2/Graphs/Lab_1/Lab_1/Debug/: vc142.idb
1st Year/Semester 2/Graphs/Lab_1/Lab_1/Debug/Lab_1.tlog/: CL.write.1.tlog  link.command.1.tlog
1st Year/Semester 2/OOP/Exam_25_May/Examen/Examen/: CMakeLists.txt  Examen.ui  Repository.cpp  Service.h  main.cpp
1st Year/Semester 2/OOP/Exam_4_May/: CMakeLists.txt  HospitalDepartament.cpp  HospitalDepartament.h  NeonatalUnit.cpp  Service.h  Surgery.cpp  Surgery.h  main.cpp
1st Year/Semester 2/OOP/Lab11-GUI/: Action.h  ActionRemove.cpp  ActionUpdate.cpp  CMakeLists.txt  FileRepository.cpp  MovieValidator.cpp  RepositoryException.cpp  ValidationException.cpp  main.cpp
1st Year/Semester 2/SDA/Lab_2Final/: CMakeLists.txt  DLLNode.h  IteratedList.h  ShortTest.cpp
1st Year/Semester 2/SDA/Lab_2Final/Lab_2Final/: Lab_2Final.vcxproj
1st Year/Semester 2/SDA/Lab_2Final/Lab_2Final/Debug/Lab_2Final.tlog/: CL.read.1.tlog  CL.write.1.tlog  Lab_2Final.lastbuildstate  link.command.1.tlog
2nd Year/APM/Lab_3/: log-test.txt  log1.txt  log2.txt  log3.txt
2nd Year/APM/Lab_4/: log1.txt  log2.txt  log5.txt  log6.txt
2nd Year/APM/Lab_5/: log1.txt  log5.txt  log6.txt  log7.txt
2nd Year/APM/Lab_6/: log2.txt  log7.txt
2nd Year/APM/Lab_7/: log6.txt
2nd Year/APM/Lucru_examen/: log10.txt  log11.txt  log12.txt  log13.txt  log14.txt  log15.txt  log8.txt  log9.txt
2nd Year/CN/: ExamModel.pkt
2nd Year/CN/Lab_1/: server.php
2nd Year/CN/Lab_2/: client.php  server.php
2nd Year/CN/Lab_3/: m.py
2nd Year/CN/Lab_4_tcp/: client_nou.py  memory.txt  server.py
2nd Year/CN/Lab_4_udp/: c_u.py
2nd Year/CN/Lab_5/: Lab.txt  proiect final.pkt
2nd Year/CN/Lab_exam_1/: server_nou.py
2nd Year/Databases/Lab1/: Paul_Stefan_Colta_ms.sql  ubb_database_Categories.sql  ubb_database_Equipment.sql  ubb_database_Programmers.sql  ubb_database_Projects.sql  ubb_database_TechnologiesProjects.sql  ubb_database_ms.sql
2nd Year/Databases/Lab2/: Paul_Stefan_Colta_ms.sql
2nd Year/Databases/Lab3/: Paul_Stefan_Colta_ms.sql  main.sql
2nd Year/Databases/Lab4/: Paul_Stefan_Colta_generated.sql  Paul_Stefan_Colta_ms.sql
2nd Year/PLF/Lab_3/: lab_3.pl
2nd Year/PLF/Lab_4/: lab_4.pl
2nd Year/PLF/Lab_5/: lab_5.lisp
2nd Year/PLF/Lab_6/: lab_6.lisp
2nd Year/PLF/Lab_7/: lab_7.lisp
2nd Year/Prob and Stats/Lab_1/: Lab_1.txt  octave-workspace
2nd Year/Prob and Stats/Lab_2/: Lab_2.m  Lab_2.txt
2nd Year/Prob and Stats/Lab_3/: Lab_3.txt
2nd Year/Prob and Stats/Lab_7/: Colta.txt
Assignment 10/: ai.py  connect4.py
Assignment 11/: structure.py
Assignment 12/: iterative.py  recursive.py
Assignment 2/: numbers.py
Assignment 3-4/: functions.py
Assignment 5/: service.py
Assignment 6-8/: PickleRepo.py  Repo.py  Tests.py  TextRepository.py  disciplines.txt  domain.py  grades.txt  jsonRepo.py  main.py  service.py  settings.properties  settings_binary.properties  structure.py  students.pickle  students.txt  tester.py  ui.py  undo.py
Semester 2/OOP/DrillFinalExam/ExamPractic/: CMakeLists.txt  Controller.h  ExamPractic.cpp  ExamPractic.qrc  ExamPractic.ui  ExamPractic.vcxproj  ExamPractic.vcxproj.filters  Issue.cpp  User.cpp  User.h  users.txt
Semester 2/OOP/Exam_20_June/Exam/Exam/: CMakeLists.txt  Exam.vcxproj  Exam.vcxproj.filters  Examen.cpp  Examen.h  Observer.h  Repository.cpp  Repository.h  Service.cpp  Service.h  Star.h  TableModel.cpp  TableWidget.cpp  input2.txt  main.cpp
Semester 2/OOP/Exam_20_June/Exam/Exam/x64/Debug/Exam.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Exam.lastbuildstate  Exam.write.1u.tlog  link.7684.delete.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  moc.read.1u.tlog  moc.write.1u.tlog  uic.read.1u.tlog  uic.write.1u.tlog
Semester 2/OOP/Exam_20_June/Exam/Exam/x64/Debug/uic/: ui_Examen.h
Semester 2/OOP/Lab 12 final/Lab12/: Action.h  CMakeLists.txt  FileRepository.cpp  FileRepository.h  Lab12.cpp  Lab12.h  Lab12.ui  Lab12.vcxproj  Lab12.vcxproj.filters  Movie.cpp  MyListTableModel.cpp  MyListTableModel.h  MyListWidget.cpp  MyListWidget.h  UserService.h  inputFile.in  main.cpp  test.csv  test.html  ui_Lab12.h  ui_MyListWidget.h
Semester 2/OOP/Lab 12 final/Lab12/x64/Debug/: Lab12.ilk
Semester 2/OOP/Lab 12 final/Lab12/x64/Debug/Lab12.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lab12.lastbuildstate  Lab12.write.1u.tlog  link.13580.delete.1.tlog  link.15196.delete.1.tlog  link.1844.delete.1.tlog  link.5896.delete.1.tlog  link.command.1.tlog  link.delete.1.tlog  link.read.1.tlog  link.write.1.tlog  moc.read.1u.tlog  moc.write.1u.tlog  rcc.read.1u.tlog  rcc.write.1u.tlog  uic.read.1u.tlog  uic.write.1u.tlog
Semester 2/OOP/Lab 12 final/Lab12/x64/Debug/moc/: moc_MyListWidget.cpp
Semester 2/OOP/Lab 12 final/Lab12/x64/Debug/uic/: ui_Lab12.h
Semester 2/OOP/Lab12-GUI2/: CMakeLists.txt  FileRepository.cpp  GUI.cpp  GUI.h  HTMLRepository.cpp  Lab12_GUI2.ui  main.cpp
Semester 2/OOP/Lab_5(6)/VSCode/: CMakeLists.txt  FileRepository.h  HTMLRepository.cpp  HTMLRepository.h  Repository.cpp  Repository.h  Tests.cpp  ValidationException.h  lab8.vcxproj  lab8.vcxproj.filters
Semester 2/OOP/Lab_5(6)/VSCode/Debug/: vc142.idb
Semester 2/OOP/Lab_5(6)/lab8/lab8/: ActionUpdate.h  AdminService.cpp  AdminService.h  CMakeLists.txt  CSVRepository.cpp  CSVRepository.h  DynamicVector.h  FileRepository.cpp  FileRepository.h  Repository.cpp  Repository.h  Tests.cpp  UI.cpp  UI.h  UserService.cpp  UserService.h  lab8.vcxproj  lab8.vcxproj.filters  main.cpp
Semester 2/OOP/Lab_5(6)/lab8/lab8/Debug/: vc142.idb
Semester 2/OOP/Lab_5(6)/lab8/lab8/Debug/lab8.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Semester 2/OS/: hw.sh
Semester 2/SDA/Lab5/: App.cpp  CMakeLists.txt  ExtendedTest.cpp  MultiMap.cpp  MultiMap.h  MultiMapIterator.cpp  MultiMapIterator.h  ShortTest.cpp
(+1723 files in other folders)
